<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.goaltracker.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_goal_monitoring"
        android:name="com.example.goaltracker.fragment.GoalMonitoringFragment"
        android:label="@string/title_goals_monitoring"
        tools:layout="@layout/fragment_goal_monitoring" />

    <fragment
        android:id="@+id/nav_add_goals"
        android:name="com.example.goaltracker.fragment.AddGoalsFragment"
        android:label="@string/title_add_goal"
        tools:layout="@layout/fragment_add_goals" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.goaltracker.fragment.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.goaltracker.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>